Adjusted orderby padding to avoid cutting off the text.
git-svn-id: http://hopmod.googlecode.com/svn/trunk@351 d7818858-e1b4-11dd-a738-5fe2e3cfbcc5

--- a/www/style.css
+++ b/www/style.css
@@ -130,7 +130,7 @@ background-color: #FFFFFF;}
 
 #sddm li
 {       margin: 0;
-        padding: 0;
+        padding-right: 50;
         list-style: none;
         float: right;
         font: bold 8px arial}
